@@ -11,6 +11,7 @@ Date: ????
     - Fix sortKeys typo
     - Extract the recipe and machine from the table
     - Blacklist rockets, drills & offshore pumps
+    - Sum all the entities and modules
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2025. 03. 07
